# info_denoise_compress

./: .gitignore  ReadMe.md  START.md  check_env.py  run.bat  run.sh  【定稿】产品需求文档_PRD_Final.md  产品需求文档_PRD_Final.md  测试用例与验收标准_Test_Cases.md
deploy/: README.md  启动Web3.bat  启动Web3.ps1  启动Web3.sh
docs/: README.md  api-config-guide.md  prompts.md  rules.md  selection-report.md
docs/develop/: TODO.md  design.md  requirements.md  tasks.md
extensions/telegram_ai_bot/: .env.example  .gitignore  README.md  SELECTION_REPORT.md  bot.py  pyproject.toml  requirements.txt
extensions/telegram_ai_bot/core/: config.py  db.py  formatting.py  logging_setup.py  runtime.py  validation.py
extensions/telegram_ai_bot/handlers/: admin.py  basic.py  natural_language.py  nl_event.py  nl_helpers.py  rss.py
extensions/telegram_ai_bot/prompts/: analysis.py  brief.py  intent.py
extensions/telegram_ai_bot/services/: data_service.py  llm_service.py  rss_service.py  scheduler_service.py
extensions/telegram_ai_bot/tests/: test_data_service.py  test_llm_service.py  test_validation.py
src/backend/TrendRadar/: README-EN.md  README.md  requirements.txt  run_web3_push.py  test_web3_crawler.py  web3_html_template.py
src/backend/TrendRadar/config/: config.yaml  frequency_words.txt  web3_sources.yaml
src/backend/TrendRadar/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  html_patch.py  html_simple.py  manage.py  web3_html_template.py
src/backend/TrendRadar/docs/: wechat-push-guide.md
src/backend/TrendRadar/output/: report.html
(+40 files in other folders)
